--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -238,6 +238,9 @@ a {
   height:20pt;
   margin:4pt;
 }
+.mdc-list {
+  max-width:600px;
+}
 
 @media (max-width: 450px) {
   ul,ol {
@@ -246,6 +249,12 @@ a {
   img {
     max-width: 100%;
     max-height: 200px;
+  }
+  .site-content {
+    margin:2pt;
+  }
+  section {
+    padding-right:5pt;
   }
   .mdc-typography--display3 {
     font-size:30pt;
