--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -83,14 +83,12 @@
   });
   </script>
 
-  <script>
-  // Query window.parent and set background color of iframe to background color of parent
-  //  console.info(window.parent.document.body.style.backgroundColor);
-  </script>
-
   {% block scripts %}{% endblock %}
 
-  <script>mdc.autoInit()</script>
+  <script>
+  // Auto-initialize Google Material Design Components
+  mdc.autoInit()
+  </script>
 
 </body>
 </html>
