misquoted trans tag

--- a/peerinst/templates/registration/sign_up_admin_email.html
+++ b/peerinst/templates/registration/sign_up_admin_email.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400">
   <style>
   a {
     color: #54c0db;
@@ -11,7 +11,7 @@
 
 <body style="padding:20pt;background-color: #f4f4f4;font-family: 'Montserrat', sans-serif;font-weight: 400;font-size: 11pt;color: #004266;">
 
-  <h1 style="color: #54c0db;font-weight:700;">{% trans 'New user request' %}</h1>
+  <h1 style="color: #54c0db;font-size:3.5rem;">{% trans 'New user request' %}</h1>
 
   {% blocktrans %}
 
