--- a/peerinst/templates/peerinst/assignment_list.html
+++ b/peerinst/templates/peerinst/assignment_list.html
@@ -15,7 +15,7 @@
   <div class="search">
     <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
       <label class="mdc-floating-label" for="search-bar">Search</label>
-      <input class="mdc-text-field__input" type="search" id="search-bar" oninput="search()" size="50" style="-webkit-transform:translateY(-8pt)">
+      <input class="mdc-text-field__input" type="search" id="search-bar" oninput="search()" size="50" style="transform:translateY(-8pt)">
       <div class="mdc-notched-outline">
         <svg>
           <path class="mdc-notched-outline__path"/>
