--- a/peerinst/templates/registration/password_reset_email_html.html
+++ b/peerinst/templates/registration/password_reset_email_html.html
@@ -1,34 +1,23 @@
+{% extends 'registration/email_base.html' %}
+
 {% load i18n %}
 
-<head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400">
-  <style>
-  a {
-    color: #54c0db;
-  }
-  </style>
-</head>
+{% block body %}
 
-<body style="padding:20pt;background-color: #f4f4f4;font-family: 'Montserrat', sans-serif;font-weight: 400;font-size: 11pt;color: #004266;">
+<h1>{% trans 'Password reset' %}</h1>
 
-  <h1 style="color: #54c0db;font-size:3.5rem;">{% trans 'Password reset' %}</h1>
+<p>{% trans "You're receiving this email because you requested a password reset for your user account at " %}{{ site_name }}.</p>
 
-  {% blocktrans %}
+<p>{% trans "Please go to the following page and choose a new password:" %}</p>
 
-  <p>You're receiving this email because you requested a password reset for your user account at {{ site_name }}.</p>
+{% block reset_link %}
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{% endblock %}
 
-  {% endblocktrans %}
+<p>{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}</p>
 
-  <p>{% trans "Please go to the following page and choose a new password:" %}</p>
+<p>{% trans "Thanks for using our site!" %}</p>
 
-  {% block reset_link %}
-  {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
-  {% endblock %}
+<p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}</p>
 
-  <p>{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}</p>
-
-  <p>{% trans "Thanks for using our site!" %}</p>
-
-  <p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}</p>
-
-</body>
+{% endblock %}
