--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="DALITE NG">
   <link rel="icon" href="{% static 'peerinst/img/logo.png' %}">
-  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+  <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   {% compress css %}
   <link href="{% static 'peerinst/css/vendor/material-components-web.min.css' %}" rel="stylesheet">
   <link href="{% static 'peerinst/css/main.css' %}" rel="stylesheet">
