https for password reset link

--- a/peerinst/templates/registration/password_reset_email_html.html
+++ b/peerinst/templates/registration/password_reset_email_html.html
@@ -11,7 +11,7 @@
 <p>{% trans "Please go to the following page and choose a new password:" %}</p>
 
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+https://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 
 <p>{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}</p>
