--- a/custom-settings/SALTISES4/templates/peerinst/custom-instance-head.html
+++ b/custom-settings/SALTISES4/templates/peerinst/custom-instance-head.html
@@ -1,7 +1,9 @@
 {% load staticfiles compress %}
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,400i|Montserrat:300,700">
+<!-- External resources -->
+<link href="https://fonts.googleapis.com/css?family=Cardo:400,400i|Montserrat:300,700" rel="stylesheet">
 
+<!-- Local resources -->
 {% compress css %}
-<link rel="stylesheet" href="{% static 'peerinst/css/custom-instance.css' %}">
+<link href="{% static 'peerinst/css/custom-instance.css' %}" rel="stylesheet">
 {% endcompress %}
