--- a/peerinst/static/peerinst/css/material-components-web.scss
+++ b/peerinst/static/peerinst/css/material-components-web.scss
@@ -23,11 +23,13 @@ $mdc-theme-background: #f4f4f4;
 @import '@material/checkbox/mdc-checkbox';
 @import '@material/chips/mdc-chips';
 @import '@material/elevation/mdc-elevation';
+@import '@material/form-field/mdc-form-field';
 @import '@material/icon-toggle/mdc-icon-toggle';
 @import '@material/layout-grid/mdc-layout-grid';
 @import '@material/line-ripple/mdc-line-ripple';
 @import '@material/list/mdc-list';
 @import '@material/notched-outline/mdc-notched-outline';
+@import "@material/radio/mdc-radio";
 @import '@material/ripple/mdc-ripple';
 @import '@material/textfield/mdc-text-field';
 @import '@material/theme/mdc-theme';
