--- a/peerinst/templates/peerinst/question_review_base.html
+++ b/peerinst/templates/peerinst/question_review_base.html
@@ -22,7 +22,7 @@
   {% endfor %}
 </ul>
 <div id="your-answer">
-  <p>
+  <p class="mdc-typography--body1">
     {% blocktrans %}
     You answered <strong>{{ first_choice_label }}</strong> and gave this rationale:
     {% endblocktrans %}
