--- a/peerinst/templates/peerinst/question_review.html
+++ b/peerinst/templates/peerinst/question_review.html
@@ -1,10 +1,10 @@
 {% extends 'peerinst/question_review_base.html' %}
-{% load i18n %}
-{% load staticfiles %}
+
+{% load add_class i18n staticfiles %}
 
 {% block answers %}
 {{ block.super }}
-<p>
+<p class="mdc-typography--body1">
   {% if sequential_review %}
   {% blocktrans %}
   Consider the problem again, and select the most convincing rationale.
@@ -21,11 +21,12 @@
 
 {% block inner_form %}
 {{ form.non_field_errors }}
-<div class="rationales">
+<div class="rationales mdc-typography--body1">
   {% for second_answer_choice, rationale_choice in form.rationale_groups %}
   <div class="rationale" id="rationales-{{ forloop.counter0 }}">
     <div class="rationale-choice">{{ second_answer_choice }}.</div>
-    <div class="rationale-text-container">{{ rationale_choice.errors }} {{ rationale_choice }}</div>
+    <div class="rationale-text-container">{{ rationale_choice.errors }} {{ rationale_choice }}
+    </div>
   </div>
   {% endfor %}
 </div>
