--- a/peerinst/templates/peerinst/question_review.html
+++ b/peerinst/templates/peerinst/question_review.html
@@ -25,7 +25,23 @@
   {% for second_answer_choice, rationale_choice in form.rationale_groups %}
   <div class="rationale" id="rationales-{{ forloop.counter0 }}">
     <div class="rationale-choice">{{ second_answer_choice }}.</div>
-    <div class="rationale-text-container">{{ rationale_choice.errors }} {{ rationale_choice }}
+    <div class="rationale-text-container">{{ rationale_choice.errors }}
+      <ul>
+      {% for r in rationale_choice %}
+        <li>
+          <div class="mdc-form-field">
+            <div class="mdc-radio" data-mdc-auto-init="MDCRadio">
+              {{ r.tag|add_class:"mdc-radio__native-control" }}
+              <div class="mdc-radio__background">
+                <div class="mdc-radio__outer-circle"></div>
+                <div class="mdc-radio__inner-circle"></div>
+              </div>
+            </div>
+            <label class="mdc-typography--body1" for="{{ choice.id_for_label }}">{{ r.choice_label }}</label>
+          </div>
+        </li>
+      {% endfor %}
+      </ul>
     </div>
   </div>
   {% endfor %}
