--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -174,6 +174,9 @@ header a {
   opacity:0.8;
   padding-left: 15pt;
 }
+.dense-list {
+  margin-bottom:4px;
+}
 #logo {
   width: 40px;
   vertical-align: middle;
