--- a/peerinst/templates/peerinst/assignment_list.html
+++ b/peerinst/templates/peerinst/assignment_list.html
@@ -30,7 +30,7 @@
 
   <ul>
   {% for obj in object_list %}
-    <li id="{{ obj.title }}" name="item">
+    <li class="dense-list" id="{{ obj.title }}" name="item">
       {{ forloop.counter }}. <a href="{% url 'question-list' assignment_id=obj.pk %}">
       {{ obj.title }}</a>
     </li>
