--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -289,4 +289,10 @@ a {
   .mdc-typography--display1 {
     font-size:20pt;
   }
+  #id_rationale {
+    width:100%;
+  }
+  .rationales {
+    margin-left:20px;
+  }
 }
