--- a/peerinst/templates/peerinst/question_list.html
+++ b/peerinst/templates/peerinst/question_list.html
@@ -13,56 +13,65 @@
 
     {% if user.is_staff %}
     <div class="admin-link">
-      <a href="{% url 'assignment-update' assignment_id=assignment.identifier%}">{% trans 'Click here to change which questions are part of this assignment' %}</a>
+      <a href="{% url 'assignment-update' assignment_id=assignment.identifier%}">{% trans 'Click here to change question list' %}</a>
     </div>
     {% endif %}
 
-    <ul>
+    <ol>
     {% for obj in object_list %}
-    <li>{{ forloop.counter }}. <a href="{% url 'question' assignment_id=assignment.pk question_id=obj.pk %}">{{ obj.title }}</a>
-    <span id="stats-{{obj.id}}" class="stats">
-      <i class="material-icons analytics-tags" onclick="showAnalytics({{ obj.id }})">assessment</i>
-      <span id="rating-{{obj.id}}"></span>
-      <i class="material-icons analytics-tags" onclick="showAssignments({{ obj.id }})">description</i>{{ obj.assignment_set.all.count }}
-      <i class="material-icons analytics-tags" onclick="showRationales({{ obj.id }})">chat</i>{{ obj.answer_set.all.count }}
-    </span>
-    <div class="question-text">
-      {{ obj.text|safe|striptags }}
-    </div>
-    {% if obj.image %}
-    <img class="question-image" src="{{ obj.image.url }}"
-      width=200 alt="obj.image_alt_text">
-    {% endif %}
-    <div style="clear:both;"></div>
-    <div>
-      <span id="{{ obj.id }}" name="analytics" class="items-for-question"><b>Analytics:</b></span>
-      <div id="{{ obj.id }}" name="analytics" class="items-for-question">
-        <svg id="first-frequency-{{ obj.id }}" width="300" height="80" style="vertical-align:middle"></svg>
-        <svg id="matrix-{{ obj.id }}" width="60" height="60" style="vertical-align:middle"></svg>
-        <svg id="second-frequency-{{ obj.id }}" width="300" height="80" style="vertical-align:middle"></svg>
+      <li class="dense-list mdc-typography--body1"> {{ obj.text|safe }}
+
+      <div class="mdc-typography--caption">
+        <a href="{% url 'question' assignment_id=assignment.pk question_id=obj.pk %}">{{ obj.title|safe }}</a>:
+        {% for c in obj.category.all %}
+          {{ c.title|safe }}
+        {% empty %}
+          {% trans 'Uncategorized' %}
+        {% endfor %}
       </div>
-    </div>
-    <div>
-      <span id="{{ obj.id }}" name="assignment" class="items-for-question"><b>Assignments:</b></span>
-      <ul>
-        {% for assignment in obj.assignment_set.all %}
-        <li id="{{ obj.id }}" name="assignment" class="items-for-question"><a href="{% url 'question-list' assignment_id=assignment.pk %}">{{ assignment.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
-    <div>
-      <span id="{{ obj.id }}" name="rationale" class="items-for-question"><b>Rationales:</b></span>
-      <ul>
-        {% for answer in obj.answer_set.all %}
-        <li id="{{ obj.id }}" name="rationale" class="items-for-question">{{ answer.rationale|safe|striptags  }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    </li>
-    {% empty %}
-    <li>{% trans 'No questions available.' %}</li>
-    {% endfor %}
-    </ul>
+
+      <div id="stats-{{obj.id}}" class="stats">
+        <i class="material-icons analytics-tags" onclick="showAssignments({{ obj.id }})">description</i>{{ obj.assignment_set.all.count }}
+        <i class="material-icons analytics-tags" onclick="showRationales({{ obj.id }})">chat</i>{{ obj.answer_set.all.count }}
+        <i class="material-icons analytics-tags" onclick="showAnalytics({{ obj.id }})">assessment</i>
+        <span id="rating-{{obj.id}}"></span>
+        <a href="{% url 'question' assignment_id=assignment.pk question_id=obj.pk %}"><i class="material-icons analytics-tags">play_circle_filled</i></a>
+      </div>
+
+      {% if obj.image %}
+      <img class="question-image" src="{{ obj.image.url }}"
+        width=200 alt="obj.image_alt_text">
+      {% endif %}
+      <div style="clear:both;"></div>
+      <div>
+        <span id="{{ obj.id }}" name="analytics" class="items-for-question"><b>Analytics:</b></span>
+        <div id="{{ obj.id }}" name="analytics" class="items-for-question">
+          <svg id="first-frequency-{{ obj.id }}" width="300" height="80" style="vertical-align:middle"></svg>
+          <svg id="matrix-{{ obj.id }}" width="60" height="60" style="vertical-align:middle"></svg>
+          <svg id="second-frequency-{{ obj.id }}" width="300" height="80" style="vertical-align:middle"></svg>
+        </div>
+      </div>
+      <div>
+        <span id="{{ obj.id }}" name="assignment" class="items-for-question"><b>Assignments:</b></span>
+        <ul>
+          {% for assignment in obj.assignment_set.all %}
+          <li id="{{ obj.id }}" name="assignment" class="items-for-question"><a href="{% url 'question-list' assignment_id=assignment.pk %}">{{ assignment.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div>
+        <span id="{{ obj.id }}" name="rationale" class="items-for-question"><b>Rationales:</b></span>
+        <ul>
+          {% for answer in obj.answer_set.all %}
+          <li id="{{ obj.id }}" name="rationale" class="items-for-question">{{ answer.rationale|safe|striptags  }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      </li>
+      {% empty %}
+      <li>{% trans 'No questions available.' %}</li>
+      {% endfor %}
+    </ol>
 </section>
 </main>
 {% endblock %}
